--- a/cliente_esp/main/CMakeLists.txt
+++ b/cliente_esp/main/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(COMPONENT_SRCS "main.c wifi.c http_client.c mqtt.c dht11.c cJSON.c flash_memo.c")
+set(COMPONENT_SRCS "main.c wifi.c mqtt.c dht11.c flash_memo.c")
 set(COMPONENT_ADD_INCLUDEDIRS ".")
 
 register_component()
