--- a/servidor_central/Dockerfile
+++ b/servidor_central/Dockerfile
@@ -1,13 +1,16 @@
-FROM node:14
+FROM node:14-alpine
 
 RUN npm install -g npm@latest
 
-WORKDIR /central_server
+WORKDIR /app
 
-COPY ["package*.json", "yarn.lock", "./"]
+COPY package.json ./
+COPY yarn.lock ./
 
 RUN npm install
 
 COPY . .
+
+EXPOSE 3000
 
 CMD ["npm", "start"]
