--- a/servidor_central/package.json
+++ b/servidor_central/package.json
@@ -15,6 +15,7 @@
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
     "react-scripts": "4.0.3",
+    "react-switch": "^6.0.0",
     "sass": "^1.43.4",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
