--- a/servidor_central/package.json
+++ b/servidor_central/package.json
@@ -11,6 +11,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "react": "^17.0.2",
+    "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-modal": "^3.14.3",
@@ -45,6 +46,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-csv": "^1.1.2",
     "@types/react-modal": "^3.13.1"
   }
 }
