--- a/servidor_central/package.json
+++ b/servidor_central/package.json
@@ -10,6 +10,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "mqtt": "^4.2.8",
     "react": "^17.0.2",
     "react-csv": "^2.0.3",
     "react-dom": "^17.0.2",
@@ -46,6 +47,7 @@
     ]
   },
   "devDependencies": {
+    "@types/paho-mqtt": "^1.0.5",
     "@types/react-csv": "^1.1.2",
     "@types/react-modal": "^3.13.1"
   }
